on chop of things

--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Alicia's Recipe App</title>
-    <meta name="description" content="Alicia's Recipe App">
+    <title>On Chop of Things</title>
+    <meta name="description" content="On Chop of Things">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
